--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.commons-email-1.5.jar=/home/juniorrek/callua/web/WEB-INF/lib/commons-email-1.5.jar
-file.reference.gson-2.8.2.jar=/home/juniorrek/callua/web/WEB-INF/lib/gson-2.8.2.jar
+file.reference.activation-1.1.jar=web/WEB-INF/lib/activation-1.1.jar
+file.reference.commons-email-1.5.jar=web/WEB-INF/lib/commons-email-1.5.jar
+file.reference.gson-2.8.2.jar=web/WEB-INF/lib/gson-2.8.2.jar
+file.reference.javax.mail-1.5.6.jar=web/WEB-INF/lib/javax.mail-1.5.6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,10 +46,12 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.8.2.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.restapi.classpath}:\
+    ${file.reference.activation-1.1.jar}:\
     ${file.reference.commons-email-1.5.jar}:\
-    ${libs.restapi.classpath}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.javax.mail-1.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
