--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,16 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.activation-1.1.jar=web/WEB-INF/lib/activation-1.1.jar
+file.reference.commons-beanutils-1.9.2.jar=web/WEB-INF/lib/commons-beanutils-1.9.2.jar
+file.reference.commons-collections-3.2.2.jar=web/WEB-INF/lib/commons-collections-3.2.2.jar
+file.reference.commons-digester-2.1.jar=web/WEB-INF/lib/commons-digester-2.1.jar
 file.reference.commons-email-1.5.jar=web/WEB-INF/lib/commons-email-1.5.jar
+file.reference.commons-logging-1.2.jar=web/WEB-INF/lib/commons-logging-1.2.jar
 file.reference.gson-2.8.2.jar=web/WEB-INF/lib/gson-2.8.2.jar
+file.reference.itext-2.1.7.jar=web/WEB-INF/lib/itext-2.1.7.jar
+file.reference.jasperreports-6.2.2.jar=web/WEB-INF/lib/jasperreports-6.2.2.jar
 file.reference.javax.mail-1.5.6.jar=web/WEB-INF/lib/javax.mail-1.5.6.jar
+file.reference.joda-time-2.4.jar=web/WEB-INF/lib/joda-time-2.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -51,7 +58,14 @@ javac.classpath=\
     ${file.reference.activation-1.1.jar}:\
     ${file.reference.commons-email-1.5.jar}:\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.javax.mail-1.5.6.jar}
+    ${file.reference.javax.mail-1.5.6.jar}:\
+    ${file.reference.commons-beanutils-1.9.2.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-6.2.2.jar}:\
+    ${file.reference.joda-time-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
